--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "voxel"
+name = "voxel_visualizer"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,5 @@ winit = "0.28"
 pollster = "0.3"
 glam = "0.26"
 rand = "0.8"
-bytemuck = { version = "1.14.0", features = ["derive"] }
-env_logger = "0.10.1"
+env_logger = "0.11.6"
+bytemuck = "1.12"
