--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ pollster = "0.3"
 glam = "0.26"
 rand = "0.8"
 env_logger = "0.11.6"
-bytemuck = "1.12"
+bytemuck = { version = "1.14.0", features = ["derive"] }
